--- a/README
+++ b/README
@@ -1,51 +1,21 @@
-NOTE: we have stopped maintaining the x86 version of xv6, and switched
-our efforts to the RISC-V version
-(https://github.com/mit-pdos/xv6-riscv.git)
+# XV6 Threading and Scheduling Enhancement
 
-xv6 is a re-implementation of Dennis Ritchie's and Ken Thompson's Unix
-Version 6 (v6).  xv6 loosely follows the structure and style of v6,
-but is implemented for a modern x86-based multiprocessor using ANSI C.
+This project focuses on enhancing the XV6 operating system by introducing kernel thread support, mutex locks for synchronization, and implementing a round-robin scheduling mechanism. The goal is to enable XV6 to support concurrent execution of kernel threads within a single process on multi-core systems, thereby improving the operating system's efficiency and multitasking capabilities.
 
-ACKNOWLEDGMENTS
+## Features
 
-xv6 is inspired by John Lions's Commentary on UNIX 6th Edition (Peer
-to Peer Communications; ISBN: 1-57398-013-7; 1st edition (June 14,
-2000)). See also https://pdos.csail.mit.edu/6.828/, which
-provides pointers to on-line resources for v6.
+- **Kernel Threads**: Introduce system calls (`clone`, `join`) to manage kernel threads, allowing a single process to execute multiple threads concurrently.
+- **Mutex Locks**: Implement mutex locks (`lock_init`, `lock_acquire`, `lock_release`) to ensure thread safety and prevent race conditions in critical sections.
+- **Round Robin Scheduling**: Modify the scheduler to adopt a round-robin approach, ensuring fair CPU time allocation among processes and threads.
 
-xv6 borrows code from the following sources:
-    JOS (asm.h, elf.h, mmu.h, bootasm.S, ide.c, console.c, and others)
-    Plan 9 (entryother.S, mp.h, mp.c, lapic.c)
-    FreeBSD (ioapic.c)
-    NetBSD (console.c)
+## Development Notes
 
-The following people have made contributions: Russ Cox (context switching,
-locking), Cliff Frey (MP), Xiao Yu (MP), Nickolai Zeldovich, and Austin
-Clements.
+- **Memory Management**: Pay special attention to the allocation and deallocation of thread stacks.
+- **Synchronization**: Implement and test lock mechanisms carefully to avoid deadlocks and race conditions.
+- **Concurrency Control**: Ensure that the new scheduling mechanism and thread model do not introduce fairness issues.
 
-We are also grateful for the bug reports and patches contributed by Silas
-Boyd-Wickizer, Anton Burtsev, Cody Cutler, Mike CAT, Tej Chajed, eyalz800,
-Nelson Elhage, Saar Ettinger, Alice Ferrazzi, Nathaniel Filardo, Peter
-Froehlich, Yakir Goaron,Shivam Handa, Bryan Henry, Jim Huang, Alexander
-Kapshuk, Anders Kaseorg, kehao95, Wolfgang Keller, Eddie Kohler, Austin
-Liew, Imbar Marinescu, Yandong Mao, Matan Shabtay, Hitoshi Mitake, Carmi
-Merimovich, Mark Morrissey, mtasm, Joel Nider, Greg Price, Ayan Shafqat,
-Eldar Sehayek, Yongming Shen, Cam Tenny, tyfkda, Rafael Ubal, Warren
-Toomey, Stephen Tu, Pablo Ventura, Xi Wang, Keiichi Watanabe, Nicolas
-Wolovick, wxdao, Grant Wu, Jindong Zhang, Icenowy Zheng, and Zou Chang Wei.
+## Challenges
 
-The code in the files that constitute xv6 is
-Copyright 2006-2018 Frans Kaashoek, Robert Morris, and Russ Cox.
-
-ERROR REPORTS
-
-We don't process error reports (see note on top of this file).
-
-BUILDING AND RUNNING XV6
-
-To build xv6 on an x86 ELF machine (like Linux or FreeBSD), run
-"make". On non-x86 or non-ELF machines (like OS X, even on x86), you
-will need to install a cross-compiler gcc suite capable of producing
-x86 ELF binaries (see https://pdos.csail.mit.edu/6.828/).
-Then run "make TOOLPREFIX=i386-jos-elf-". Now install the QEMU PC
-simulator and run "make qemu".
+- **Shared Memory Management**: Managing shared memory between threads to prevent conflicts.
+- **Concurrency Control**: Implementing effective synchronization to handle race conditions.
+- **Stack Management**: Dynamic allocation and deallocation of thread stacks while maintaining safety.
